<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_stats" />

    <!-- item vacío para dejar espacio al FAB central -->
    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/navigation_rewards"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_recompensas" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_profile" />
</menu>